--- a/server/bench.html
+++ b/server/bench.html
@@ -212,7 +212,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-3 mb-lg-0">
                     <h1 class="text-primary-custom mb-2">
-                        <i class="bi bi-speedometer2"></i> NodeLoc VPS Benchmark
+                        <i class="bi bi-speedometer2"></i> VPS Benchmark
                     </h1>
                     <p class="text-white-50 mb-0">Comprehensive server performance testing report</p>
                 </div>
