--- a/server/bench.html
+++ b/server/bench.html
@@ -217,17 +217,18 @@
                     <p class="text-white-50 mb-0">Comprehensive server performance testing report</p>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <button class="btn btn-light me-2 mb-2" id="copyAllBtn">
-                        <i class="bi bi-clipboard"></i> Copy All
-                    </button>
-                    <button class="btn btn-info me-2 mb-2" id="generateImageBtn">
-                        <i class="bi bi-image"></i> Generate Image
-                    </button>
-                    <button class="btn btn-success me-2 mb-2" id="downloadBtn">
-                        <i class="bi bi-download"></i> Download
-                    </button>
-                    <a class="btn btn-outline-light mb-2" href="https://www.nodeloc.com" target="_blank">
-                        <i class="bi bi-house"></i> NodeLoc
+                    <div class="d-flex flex-wrap justify-content-lg-end justify-content-start gap-2">
+                        <button class="btn btn-light" id="copyAllBtn">
+                            <i class="bi bi-clipboard"></i> Copy All
+                        </button>
+                        <button class="btn btn-info" id="generateImageBtn">
+                            <i class="bi bi-image"></i> Generate Image
+                        </button>
+                        <button class="btn btn-success" id="downloadBtn">
+                            <i class="bi bi-download"></i> Download
+                        </button>
+                        <a class="btn btn-outline-light" href="https://www.nodeloc.com" target="_blank">
+                            <i class="bi bi-house"></i> NodeLoc
                     </a>
                 </div>
             </div>
