--- a/server/bench.html
+++ b/server/bench.html
@@ -229,7 +229,8 @@
                         </button>
                         <a class="btn btn-outline-light" href="https://www.nodeloc.com" target="_blank">
                             <i class="bi bi-house"></i> NodeLoc
-                    </a>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
